user login registration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Wellcome to my shop</h1>
+<!-- <app-header></app-header>
+<div style="min-height: 100vh;">
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer> -->
+<app-header2></app-header2>
+<router-outlet></router-outlet>
